--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nec purus nec nisl ultricies lacinia. Nullam nec purus nec nisl ultricies lacinia.
                             </p>
                             <div class="d-inline-flex gap-2 mb-3">
-                                <button class="align-items-center btn btn-primary btn-lg px-4 rounded-pill" type="button">
+                                <a href="#" class="align-items-center btn btn-primary btn-lg px-4 rounded-pill" type="button" target="_blank">
                                     Live demo <i class="fa-solid fa-arrow-right"></i>
-                                </button>
-                                <button class="btn btn-outline-secondary btn-lg px-4 rounded-pill" type="button">
+                                </a>
+                                <a href="#" class="btn btn-outline-secondary btn-lg px-4 rounded-pill" type="button" target="_blank">
                                     Source code <i class="fab fa-github"></i>
-                                </button>
+                                </a>
                             </div>
                         </div>
                     </div>
