Added option for favicon

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <link href="./style.css" rel="stylesheet">
     <!-- Add your Font Awesome kit url here -->
     <script src="your-fontawesome-kit-url" crossorigin="anonymous"></script>
+    <!-- Add your favicon here -->
+    <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
 </head>
 
 <body>
